# pamplejuce

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/: dependabot.yml
.github/docker/: linux-ci.Dockerfile
.github/workflows/: build_and_test.yml  build_linux.yml  build_macos.yml  build_windows.yml  cmake_ctest.yml  linux-ci-image.yml  nightly.yml  release.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.h
Tests/: Benchmarks.cpp  CatchMain.cpp  PluginBasics.cpp  catch_main.cpp
appdmg/: dmg.json
benchmarks/: Benchmarks.cpp  Catch2Main.cpp
cmake/: Assets.cmake  GitHubENV.cmake  JUCEDefaults.cmake  PamplejuceIPP.cmake  PamplejuceMacOS.cmake  PamplejuceVersion  PamplejuceVersion.cmake  Tests.cmake  Xcode.cmake
packaging/: Pamplejuce.iss  distribution.xml.template  dmg.json  installer.iss
packaging/resources/: EULA  README
source/: PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h
tests/: Catch2Main.cpp  PluginBasics.cpp
tests/helpers/: test_helpers.h
